src/include/flutter_ffi_uvc.h

// One camera per session. Sessions share nothing except the log level.
// Every call may arrive on any thread, including several threads for one
// session, and backends serialize internally. Listeners may run on native
// threads. A NULL session behaves like a closed one. Int-returning calls return
// UVC_ERROR_INVALID_PARAM (-2), uvc_ctrl_get returns INT32_MIN, JSON writers
// return 0, and uvc_last_error returns "".
typedef struct uvc_session uvc_session_t;
// Last error text of the session. Valid until the session is destroyed.
FFI_PLUGIN_EXPORT const char *uvc_last_error(uvc_session_t *session);
// Returns the current value of a control. Returns INT32_MIN on error.
FFI_PLUGIN_EXPORT int32_t uvc_ctrl_get(uvc_session_t *session, int ctrl_id);
// Compound controls that cannot be represented as a single integer value.
FFI_PLUGIN_EXPORT int uvc_get_white_balance_component_json(uvc_session_t *session, uint8_t *buffer, int buffer_length);
FFI_PLUGIN_EXPORT int uvc_set_white_balance_component_values(uvc_session_t *session, uint16_t blue, uint16_t red);
FFI_PLUGIN_EXPORT int uvc_get_focus_rel_json(uvc_session_t *session, uint8_t *buffer, int buffer_length);
FFI_PLUGIN_EXPORT int uvc_set_focus_rel_values(uvc_session_t *session, int8_t focus_rel, uint8_t speed);
FFI_PLUGIN_EXPORT int uvc_get_zoom_rel_json(uvc_session_t *session, uint8_t *buffer, int buffer_length);
FFI_PLUGIN_EXPORT int uvc_set_zoom_rel_values(uvc_session_t *session, int8_t zoom_rel, uint8_t digital_zoom, uint8_t speed);
FFI_PLUGIN_EXPORT int uvc_get_pantilt_abs_json(uvc_session_t *session, uint8_t *buffer, int buffer_length);
FFI_PLUGIN_EXPORT int uvc_set_pantilt_abs_values(uvc_session_t *session, int32_t pan, int32_t tilt);
FFI_PLUGIN_EXPORT int uvc_get_pantilt_rel_json(uvc_session_t *session, uint8_t *buffer, int buffer_length);
FFI_PLUGIN_EXPORT int uvc_set_pantilt_rel_values(uvc_session_t *session, int8_t pan_rel, uint8_t pan_speed, int8_t tilt_rel, uint8_t tilt_speed);
FFI_PLUGIN_EXPORT int uvc_get_roll_rel_json(uvc_session_t *session, uint8_t *buffer, int buffer_length);
FFI_PLUGIN_EXPORT int uvc_set_roll_rel_values(uvc_session_t *session, int8_t roll_rel, uint8_t speed);
FFI_PLUGIN_EXPORT int uvc_get_digital_window_json(uvc_session_t *session, uint8_t *buffer, int buffer_length);
FFI_PLUGIN_EXPORT int uvc_set_digital_window_values(
    uvc_session_t *session,
    uint16_t window_top,
    uint16_t window_left,
    uint16_t window_bottom,
    uint16_t window_right,
    uint16_t num_steps,
    uint16_t num_steps_units);
FFI_PLUGIN_EXPORT int uvc_get_region_of_interest_json(uvc_session_t *session, uint8_t *buffer, int buffer_length);
FFI_PLUGIN_EXPORT int uvc_set_region_of_interest_values(
    uvc_session_t *session,
    uint16_t roi_top,
    uint16_t roi_left,
    uint16_t roi_bottom,
    uint16_t roi_right,
    uint16_t auto_controls);