lib/src/flutter_ffi_uvc_bindings_generated.dart


  late final _uvc_get_white_balance_component_jsonPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<uvc_session_t>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
          )
        >
      >('uvc_get_white_balance_component_json');
  late final _uvc_get_white_balance_component_json =
      _uvc_get_white_balance_component_jsonPtr
          .asFunction<
            int Function(
              ffi.Pointer<uvc_session_t>,
              ffi.Pointer<ffi.Uint8>,
              int,
            )
          >();

  int uvc_set_white_balance_component_values(
    ffi.Pointer<uvc_session_t> session,
    int blue,
    int red,
  ) {
    return _uvc_set_white_balance_component_values(session, blue, red);
  }

  late final _uvc_set_white_balance_component_valuesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<uvc_session_t>, ffi.Uint16, ffi.Uint16)
        >
      >('uvc_set_white_balance_component_values');
  late final _uvc_set_white_balance_component_values =
      _uvc_set_white_balance_component_valuesPtr
          .asFunction<int Function(ffi.Pointer<uvc_session_t>, int, int)>();

  int uvc_get_focus_rel_json(
    ffi.Pointer<uvc_session_t> session,
    ffi.Pointer<ffi.Uint8> buffer,
    int buffer_length,
  ) {
    return _uvc_get_focus_rel_json(session, buffer, buffer_length);
  }

  late final _uvc_get_focus_rel_jsonPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<uvc_session_t>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
          )
        >
      >('uvc_get_focus_rel_json');
  late final _uvc_get_focus_rel_json = _uvc_get_focus_rel_jsonPtr
      .asFunction<
        int Function(ffi.Pointer<uvc_session_t>, ffi.Pointer<ffi.Uint8>, int)
      >();

  int uvc_set_focus_rel_values(
    ffi.Pointer<uvc_session_t> session,
    int focus_rel,
    int speed,
  ) {
    return _uvc_set_focus_rel_values(session, focus_rel, speed);
  }

  late final _uvc_set_focus_rel_valuesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<uvc_session_t>, ffi.Int8, ffi.Uint8)
        >
      >('uvc_set_focus_rel_values');
  late final _uvc_set_focus_rel_values = _uvc_set_focus_rel_valuesPtr
      .asFunction<int Function(ffi.Pointer<uvc_session_t>, int, int)>();

  int uvc_get_zoom_rel_json(
    ffi.Pointer<uvc_session_t> session,
    ffi.Pointer<ffi.Uint8> buffer,
    int buffer_length,
  ) {
    return _uvc_get_zoom_rel_json(session, buffer, buffer_length);
  }

  late final _uvc_get_zoom_rel_jsonPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<uvc_session_t>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
          )
        >
      >('uvc_get_zoom_rel_json');
  late final _uvc_get_zoom_rel_json = _uvc_get_zoom_rel_jsonPtr
      .asFunction<
        int Function(ffi.Pointer<uvc_session_t>, ffi.Pointer<ffi.Uint8>, int)
      >();

  int uvc_set_zoom_rel_values(
    ffi.Pointer<uvc_session_t> session,
    int zoom_rel,
    int digital_zoom,
    int speed,
  ) {
    return _uvc_set_zoom_rel_values(session, zoom_rel, digital_zoom, speed);
  }

  late final _uvc_set_zoom_rel_valuesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<uvc_session_t>,
            ffi.Int8,
            ffi.Uint8,
            ffi.Uint8,
          )
        >
      >('uvc_set_zoom_rel_values');
  late final _uvc_set_zoom_rel_values = _uvc_set_zoom_rel_valuesPtr
      .asFunction<int Function(ffi.Pointer<uvc_session_t>, int, int, int)>();

  int uvc_get_pantilt_abs_json(
    ffi.Pointer<uvc_session_t> session,
    ffi.Pointer<ffi.Uint8> buffer,
    int buffer_length,
  ) {
    return _uvc_get_pantilt_abs_json(session, buffer, buffer_length);
  }

  late final _uvc_get_pantilt_abs_jsonPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<uvc_session_t>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
          )
        >
      >('uvc_get_pantilt_abs_json');
  late final _uvc_get_pantilt_abs_json = _uvc_get_pantilt_abs_jsonPtr
      .asFunction<
        int Function(ffi.Pointer<uvc_session_t>, ffi.Pointer<ffi.Uint8>, int)
      >();

  int uvc_set_pantilt_abs_values(
    ffi.Pointer<uvc_session_t> session,
    int pan,
    int tilt,
  ) {
    return _uvc_set_pantilt_abs_values(session, pan, tilt);
  }

  late final _uvc_set_pantilt_abs_valuesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<uvc_session_t>, ffi.Int32, ffi.Int32)
        >
      >('uvc_set_pantilt_abs_values');
  late final _uvc_set_pantilt_abs_values = _uvc_set_pantilt_abs_valuesPtr
      .asFunction<int Function(ffi.Pointer<uvc_session_t>, int, int)>();

  int uvc_get_pantilt_rel_json(
    ffi.Pointer<uvc_session_t> session,
    ffi.Pointer<ffi.Uint8> buffer,
    int buffer_length,
  ) {
    return _uvc_get_pantilt_rel_json(session, buffer, buffer_length);
  }

  late final _uvc_get_pantilt_rel_jsonPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<uvc_session_t>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
          )
        >
      >('uvc_get_pantilt_rel_json');
  late final _uvc_get_pantilt_rel_json = _uvc_get_pantilt_rel_jsonPtr
      .asFunction<
        int Function(ffi.Pointer<uvc_session_t>, ffi.Pointer<ffi.Uint8>, int)
      >();

  int uvc_set_pantilt_rel_values(
    ffi.Pointer<uvc_session_t> session,
    int pan_rel,
    int pan_speed,
    int tilt_rel,
    int tilt_speed,
  ) {
    return _uvc_set_pantilt_rel_values(
      session,
      pan_rel,
      pan_speed,
      tilt_rel,
      tilt_speed,
    );
  }

  late final _uvc_set_pantilt_rel_valuesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<uvc_session_t>,
            ffi.Int8,
            ffi.Uint8,
            ffi.Int8,
            ffi.Uint8,
          )
        >
      >('uvc_set_pantilt_rel_values');
  late final _uvc_set_pantilt_rel_values = _uvc_set_pantilt_rel_valuesPtr
      .asFunction<
        int Function(ffi.Pointer<uvc_session_t>, int, int, int, int)
      >();

  int uvc_get_roll_rel_json(
    ffi.Pointer<uvc_session_t> session,
    ffi.Pointer<ffi.Uint8> buffer,
    int buffer_length,
  ) {
    return _uvc_get_roll_rel_json(session, buffer, buffer_length);
  }

  late final _uvc_get_roll_rel_jsonPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<uvc_session_t>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
          )
        >
      >('uvc_get_roll_rel_json');
  late final _uvc_get_roll_rel_json = _uvc_get_roll_rel_jsonPtr
      .asFunction<
        int Function(ffi.Pointer<uvc_session_t>, ffi.Pointer<ffi.Uint8>, int)
      >();

  int uvc_set_roll_rel_values(
    ffi.Pointer<uvc_session_t> session,
    int roll_rel,
    int speed,
  ) {
    return _uvc_set_roll_rel_values(session, roll_rel, speed);
  }

  late final _uvc_set_roll_rel_valuesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<uvc_session_t>, ffi.Int8, ffi.Uint8)
        >
      >('uvc_set_roll_rel_values');
  late final _uvc_set_roll_rel_values = _uvc_set_roll_rel_valuesPtr
      .asFunction<int Function(ffi.Pointer<uvc_session_t>, int, int)>();

  int uvc_get_digital_window_json(
    ffi.Pointer<uvc_session_t> session,
    ffi.Pointer<ffi.Uint8> buffer,
    int buffer_length,
  ) {
    return _uvc_get_digital_window_json(session, buffer, buffer_length);
  }

  late final _uvc_get_digital_window_jsonPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<uvc_session_t>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
          )
        >
      >('uvc_get_digital_window_json');
  late final _uvc_get_digital_window_json = _uvc_get_digital_window_jsonPtr
      .asFunction<
        int Function(ffi.Pointer<uvc_session_t>, ffi.Pointer<ffi.Uint8>, int)
      >();

  int uvc_set_digital_window_values(
    ffi.Pointer<uvc_session_t> session,
    int window_top,
    int window_left,
    int window_bottom,
    int window_right,
    int num_steps,
    int num_steps_units,
  ) {
    return _uvc_set_digital_window_values(
      session,
      window_top,
      window_left,
      window_bottom,
      window_right,
      num_steps,
      num_steps_units,
    );
  }

  late final _uvc_set_digital_window_valuesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<uvc_session_t>,
            ffi.Uint16,
            ffi.Uint16,
            ffi.Uint16,
            ffi.Uint16,
            ffi.Uint16,
            ffi.Uint16,
          )
        >
      >('uvc_set_digital_window_values');
  late final _uvc_set_digital_window_values = _uvc_set_digital_window_valuesPtr
      .asFunction<
        int Function(ffi.Pointer<uvc_session_t>, int, int, int, int, int, int)
      >();

  int uvc_get_region_of_interest_json(
    ffi.Pointer<uvc_session_t> session,
    ffi.Pointer<ffi.Uint8> buffer,
    int buffer_length,
  ) {
    return _uvc_get_region_of_interest_json(session, buffer, buffer_length);
  }

  late final _uvc_get_region_of_interest_jsonPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<uvc_session_t>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
          )
        >
      >('uvc_get_region_of_interest_json');
  late final _uvc_get_region_of_interest_json =
      _uvc_get_region_of_interest_jsonPtr
          .asFunction<
            int Function(
              ffi.Pointer<uvc_session_t>,
              ffi.Pointer<ffi.Uint8>,
              int,
            )
          >();

  int uvc_set_region_of_interest_values(
    ffi.Pointer<uvc_session_t> session,
    int roi_top,
    int roi_left,
    int roi_bottom,
    int roi_right,
    int auto_controls,
  ) {
    return _uvc_set_region_of_interest_values(
      session,
      roi_top,
      roi_left,
      roi_bottom,
      roi_right,
      auto_controls,
    );
  }

  late final _uvc_set_region_of_interest_valuesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<uvc_session_t>,
            ffi.Uint16,
            ffi.Uint16,
            ffi.Uint16,
            ffi.Uint16,
            ffi.Uint16,
          )
        >
      >('uvc_set_region_of_interest_values');
  late final _uvc_set_region_of_interest_values =
      _uvc_set_region_of_interest_valuesPtr
          .asFunction<
            int Function(ffi.Pointer<uvc_session_t>, int, int, int, int, int)
          >();
}

final class uvc_session extends ffi.Opaque {}

/// One camera per session. Sessions share nothing except the log level.
/// Every call may arrive on any thread, including several threads for one
/// session, and backends serialize internally. Listeners may run on native
/// threads. A NULL session behaves like a closed one. Int-returning calls return
/// UVC_ERROR_INVALID_PARAM (-2), uvc_ctrl_get returns INT32_MIN, JSON writers
/// return 0, and uvc_last_error returns "".
typedef uvc_session_t = uvc_session;
typedef uvc_frame_listener_tFunction =
    ffi.Void Function(ffi.Pointer<ffi.Void> user_data, ffi.Int64 sequence);
typedef Dartuvc_frame_listener_tFunction =
    void Function(ffi.Pointer<ffi.Void> user_data, int sequence);
